# stride

./: .gitignore  LICENSE  PRIVACY.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
public/: tooltip.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/filters/: easylist_domains.txt
src-tauri/icons/: icon.icns
src-tauri/src/: filters.rs  focus_filter.js  google_auth.rs  lib.rs
src-tauri/src/commands/: chrome_compat.js  focus.rs  google_auth.rs  mod.rs  notes.rs  permissions.rs  system_stats.rs  tooltip.rs  uptime_monitor.rs  webview.rs  whatsapp_sidebar_toggle.js
src/components/: DownloadToast.tsx  PanelResizer.tsx
src/components/error/: ErrorBoundary.tsx  ErrorDisplay.tsx
src/components/layout/: AppShell.tsx  DynamicPanelGrid.tsx  PanelGrid.tsx  PanelSlot.tsx  Titlebar.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/panels/: AddressBar.tsx  GripHandle.tsx  PanelHeader.tsx  PanelOverlay.tsx  WebPanel.tsx  WidgetPanel.tsx
src/components/settings/: SettingsDrawer.tsx
src/hooks/: useBookmarks.ts  useDynamicLayout.ts  useErrorHandler.ts  useGoogleAccount.ts  useKeyboardShortcuts.ts  useLongPress.ts  useNotes.ts  usePanelDrag.ts  usePanels.ts  useSidebarTooltip.ts  useWeather.ts  useWebviews.ts  useWorkspaces.ts
src/lib/: db.ts  layoutTemplates.ts  seed.ts  workspaceConstants.tsx
src/store/: useNotesStore.ts  useWorkspaceStore.ts
src/types/: index.ts  weather.ts  widgets.ts
(+21 files in other folders)
